--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,31 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.next/app-build-manifest.json
+.next/build-manifest.json
+.next/trace
+.next/cache/webpack/client-development/0.pack
+.next/cache/webpack/client-development/1.pack
+.next/cache/webpack/client-development/2.pack
+.next/cache/webpack/client-development/3.pack
+.next/cache/webpack/client-development/4.pack
+.next/cache/webpack/client-development/5.pack
+.next/cache/webpack/client-development/6.pack
+.next/cache/webpack/client-development/index.pack
+.next/cache/webpack/client-development/index.pack.old
+.next/cache/webpack/server-development/0.pack
+.next/cache/webpack/server-development/1.pack
+.next/cache/webpack/server-development/2.pack
+.next/cache/webpack/server-development/3.pack
+.next/cache/webpack/server-development/4.pack
+.next/cache/webpack/server-development/5.pack
+.next/cache/webpack/server-development/index.pack
+.next/cache/webpack/server-development/index.pack.old
+.next/server/app-paths-manifest.json
+.next/server/client-reference-manifest.js
+.next/server/client-reference-manifest.json
+.next/server/middleware-build-manifest.js
+.next/server/middleware-manifest.json
+.next/server/pages-manifest.json
+.next/server/app/page.js
+.next/static/media/business.643a23b8.jpg
