--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-responsive": "^9.0.2",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
