--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.0.1",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.13.0",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
     "sharp": "^0.32.1",
+    "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
