--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.13.0",
+    "jotai": "^2.2.2",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
