--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
@@ -49,7 +50,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.12",
     "@types/bcrypt": "^5.0.0",
+    "cross-env": "^7.0.3",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "prisma": "^4.16.1"
