--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.13.0",
-    "jotai": "^2.2.2",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
@@ -42,12 +41,15 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
+    "react-spring-bottom-sheet": "^3.4.1",
     "sharp": "^0.32.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "vaul": "^0.1.1",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
