--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.1",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -25,6 +25,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
@@ -35,13 +36,13 @@
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
-    "react-spring-bottom-sheet": "^3.4.1",
     "sharp": "^0.32.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
@@ -54,9 +55,10 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.9",
     "cross-env": "^7.0.3",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
-    "prisma": "^4.16.1"
+    "prisma": "^5.1.1"
   }
 }
