--- a/package.json
+++ b/package.json
@@ -16,44 +16,59 @@
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@pusher/push-notifications-web": "^1.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@uploadthing/react": "^5.5.0",
     "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "bson-objectid": "^2.0.4",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.13.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.257.0",
     "next": "^13.4.17",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
+    "react-textarea-autosize": "^8.5.3",
     "sharp": "^0.32.1",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
+    "uploadthing": "^5.5.3",
     "vaul": "^0.1.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
+    "@types/lodash": "^4.14.198",
     "@types/nodemailer": "^6.4.9",
     "cross-env": "^7.0.3",
     "prettier": "^3.0.0",
