--- a/package.json
+++ b/package.json
@@ -35,18 +35,20 @@
     "bcryptjs": "^2.4.3",
     "bson-objectid": "^2.0.4",
     "class-variance-authority": "^0.6.1",
+    "cloudinary": "^1.41.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "framer-motion": "^10.13.0",
+    "immer": "^10.0.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.257.0",
-    "next": "^13.4.17",
-    "next-auth": "^4.22.1",
+    "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "nodemailer": "^6.9.4",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.31",
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
