Started layout for new Gig creation - introduced new gig page for creating gigs - added relevant types and stores to use in future - added react-tags input component for new gig wizard - added postcss-import plugin for tailwind - fixed minor UI visual bugs

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
+    "react-tagsinput": "^3.20.3",
     "react-textarea-autosize": "^8.5.3",
     "sharp": "^0.32.1",
     "swiper": "^10.0.4",
@@ -74,6 +75,7 @@
     "@next/bundle-analyzer": "^13.4.12",
     "@types/lodash": "^4.14.198",
     "@types/nodemailer": "^6.4.9",
+    "@types/react-tagsinput": "^3.20.5",
     "cross-env": "^7.0.3",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
