--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vaul": "^0.9.0",
+    "zod": "^3.22.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
