--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.0.10",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
@@ -77,6 +80,7 @@
     "react-textarea-autosize": "^8.5.3",
     "recharts": "^2.12.1",
     "sharp": "^0.32.1",
+    "stripe": "^14.21.0",
     "swiper": "^10.0.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
