--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "debug": "^4.3.4",
     "embla-carousel-react": "^8.0.0-rc22",
     "encoding": "^0.1.13",
     "framer-motion": "^10.13.0",
     "fs": "^0.0.1-security",
+    "fsevents": "^2.3.3",
     "geist": "^1.2.2",
     "immer": "^10.0.3",
     "iso-3166-1-alpha-2": "^1.0.1",
@@ -88,6 +90,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.3.9"
