--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@aws-sdk/lib-storage": "^3.509.0",
     "@aws-sdk/s3-request-presigner": "^3.509.0",
     "@headlessui/react": "^1.7.17",
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.1",
     "@pusher/push-notifications-web": "^1.1.0",
@@ -59,16 +59,18 @@
     "debug": "^4.3.4",
     "embla-carousel-react": "^8.0.0-rc22",
     "encoding": "^0.1.13",
-    "framer-motion": "^10.13.0",
+    "framer-motion": "^10.18.0",
     "fs": "^0.0.1-security",
     "geist": "^1.2.2",
     "immer": "^10.0.3",
+    "input-otp": "^1.2.2",
     "iso-3166-1-alpha-2": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.257.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
+    "next-intl": "^3.10.0",
     "nodemailer": "^6.9.4",
     "postcss": "^8.4.31",
     "pusher": "^5.1.3",
@@ -76,7 +78,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.45.2",
+    "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-responsive": "^9.0.2",
     "react-tagsinput": "^3.20.3",
