--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
