--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "iso-3166-1-alpha-2": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.257.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
