--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@aws-sdk/client-s3": "^3.509.0",
     "@aws-sdk/lib-storage": "^3.509.0",
     "@aws-sdk/s3-request-presigner": "^3.509.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -76,8 +78,8 @@
     "postcss": "^8.4.31",
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
